se mejoro la parte de registrar producto derivado, y listrar productos derivados

--- a/public/css/3.TABLAS/css/style.css
+++ b/public/css/3.TABLAS/css/style.css
@@ -14,6 +14,24 @@
 
 }
 
+
+.borde{
+
+border: blue 5px solid;
+border-color: white;
+background: white;
+
+
+}
+
+.fuente{
+
+font-weight:bold;
+font-size: 15pt;
+
+}
+
+
 .table {
   margin: 0 0 20px 0;
   width: 100%;
